syntax = "proto3";

option csharp_namespace = "PrintProcessService";

package printfile;

// The service definition.
service PrintFileProcessor {
  // Sends a file name (well known location)
  rpc Process (FileRequest) returns (FileReply);
}

// The request message containing the user's name.
message FileRequest {
  string name = 1;
}

// The response message containing the greetings.
message FileReply {
  string message = 1;
}
